Adaptation des collectors de CLIArgsParser pour Java 15